<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context=".splashScreen.SplashScreen">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/teal_blue"
        android:elevation="@dimen/elevation_10dp"
        android:logo="@drawable/fast_food_icon_white"
        android:title="@string/app_name"
        android:titleTextColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/intro_logo_height"
                android:src="@drawable/code_icon" />

            <TextView
                android:id="@+id/splash_screen_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="@dimen/common_margin10"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/intro_text_for_app"
                android:textAlignment="viewStart"
                android:textColor="@color/grey"
                android:textSize="@dimen/common_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/services"
                android:textAlignment="center"
                android:textColor="@color/grey"
                android:textSize="@dimen/heading_text_size"
                android:textStyle="bold" />

            <View
                android:layout_width="@dimen/text_underlie_width"
                android:layout_height="@dimen/text_underlie_height"
                android:layout_gravity="center"
                android:background="@color/green" />

            <ImageView
                android:layout_width="@dimen/title_icon_height_width"
                android:layout_height="@dimen/title_icon_height_width"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@drawable/recipe_search_icon"
                 />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recipe_search"
                android:textAlignment="center"
                android:textColor="@color/grey"
                android:textSize="@dimen/heading_text_size" />

            <View
                android:layout_width="@dimen/text_underlie_width"
                android:layout_height="@dimen/text_underlie_height"
                android:layout_gravity="center"
                android:background="@color/green" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:padding="@dimen/common_padding10"
                android:text="@string/lorem_ipsum"
                android:textAlignment="viewStart"
                android:textSize="@dimen/common_text_size"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/home_to_search_recipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/common_margin10"
                android:background="@drawable/button_bg"
                android:text="@string/try_now"
                android:textAllCaps="false"
                android:textColor="@color/green"
                android:textSize="@dimen/common_text_size" />
            <include
                layout="@layout/made_with_love_block"
                android:layout_width="match_parent"
                android:layout_height="@dimen/made_with_love_block_height"
                android:layout_margin="@dimen/common_margin10"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>